# chatGPT-multiple-database-chat

./: agent_executor.py  function_app.py  notebook.ipynb  pyproject.toml  requirements.txt
agents/: chinook-db-agent.json  chinook-db-agent.txt  main-agent.txt  northwind-db-agent.json  northwind-db-agent.txt
database/: chinnook-structure.sql  northwind-structure.sql  question.txt
prompts/: chinook-db-agent.txt  convert_query_records_to_human.txt  core.txt  northwind-db-agent.txt
services/: chatgpt_connection.py  postgresql_connection.py  sqlite_connection.py
tests/: test_openai_conn.py  test_pg_conn.py  test_sqlite_conn.py
