[tool.poetry]
name = "aiagent-multiple-database-chat"
version = "0.1.0"
description = ""
authors = ["supakorn.emch <supakorn.emch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
openai = "^1.42.0"
json5 = "^0.9.25"
pandas = "^2.2.2"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
